hphp/test/zend/bad/errmsg_011.php
<?php

class test {

	function foo() {}
	function foo() {}

}

echo "Done\n";
?>